# rppxml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
rppxml/: __init__.py  rppxml.pyi
src/: rppxml.cpp  rppxml.hpp  rppxml.pyi  test_parse.cpp
tests/: test.ipynb  test_rppxml.py
